--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Slim and Vital Aesthetics</title>
+  <title>Slim and Vital Clinic</title>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;600&display=swap" rel="stylesheet">
   <style>
     html {
@@ -146,7 +146,7 @@
 <body>
   <!-- Body content remains the same -->
   <header>
-    <h1>Slim and Vital Aesthetics</h1>
+    <h1>Slim and Vital Clinic</h1>
     <p>Radiate Confidence. Revitalize Your Glow.</p>
   </header>
 
@@ -161,13 +161,13 @@
   </nav>
 
   <section id="home" class="hero">
-    <h2>Welcome to Slim and Vital Aesthetics</h2>
+    <h2>Welcome to Slim and Vital Clinic</h2>
     <p>Experience personalized treatments designed to enhance your natural beauty and well-being.</p>
   </section>
 
   <section id="about" class="section">
     <h2>About Us</h2>
-    <p>At Slim and Vital Aesthetics, our mission is to provide world-class aesthetic and wellness services in a tranquil, professional environment. With a team of highly skilled therapists and state-of-the-art equipment, we aim to bring out the healthiest, most confident version of you.</p>
+    <p>At Slim and Vital Clinic, our mission is to provide world-class aesthetic and wellness services in a tranquil, professional environment. With a team of highly skilled therapists and state-of-the-art equipment, we aim to bring out the healthiest, most confident version of you.</p>
   </section>
 
   <section id="services" class="section">
@@ -239,7 +239,7 @@
       <textarea name="notes" placeholder="Additional Notes (optional)"></textarea>
       <button type="submit">Book Appointment</button>
     </form>
-    <a href="https://wa.me/27726370130" class="whatsapp-button" target="_blank" rel="noopener noreferrer">
+    <a href="https://wa.me/0827914132" class="whatsapp-button" target="_blank" rel="noopener noreferrer">
       Book via WhatsApp
     </a>
   </section>
@@ -263,9 +263,9 @@
   </section>
 
   <footer id="contact">
-    <p><strong>Visit Us:</strong> 123 Wellness Avenue, Aesthetic City, ZA</p>
-    <p><strong>Call:</strong> +27 12 345 6789 | <strong>Email:</strong> info@slimandvital.co.za</p>
-    <p>&copy; 2025 Slim and Vital Aesthetics</p>
+    <p><strong>Visit Us:</strong> 354 Van herdeen capital park</p>
+    <p><strong>Call:</strong> 0827914132 | <strong>Email:</strong> info@slimandvital.co.za</p>
+    <p>&copy; 2025 Slim and Vital Clinic</p>
   </footer>
 </body>
 </html>
